# tmux-workbench

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: ws.rb
docs/: architecture.md  comparison.md  demo.md
docs/demo/: workbench.tape
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md
scripts/: demo-fixture.sh
src/: commands.rs  config.rs  db.rs  main.rs  model.rs  remote.rs  tui.rs  util.rs
